chore(jbct): reformat codebase + enable format goal in build.sh (PR #243)